<resources>
    <string name="app_name">Cross Stitch Floss Thread Accounting(Trial)</string>
    <string name="new_stich">New project</string>
    <string name="delete">-</string>
    <string name="add">+</string>
    <string name="lengthNit">Thread length</string>
    <string name="total_nits">" Total number of threads"</string>
    <string name="project_cancel">Cancel project</string>
    <string name="project_finish">Finish project</string>
    <string name="length_thread">Thread length</string>
    <string name="number_color">Color number</string>
    <string name="NumberNit">Thread number</string>
    <string name="Projects">Project</string>
    <string name="total_number_of_thread">Total number of thread</string>
    <string name="sort_by_max">Sort by maximum</string>
    <string name="sort_by_min">Sort by minimum</string>
    <string name="sort_by_number">Sort by number</string>
    <string name="dmc150">Dusty Rose - ultra vy dk</string>
    <string name="dmc151">Dusty Rose - vy lt</string>
    <string name="dmc152">Shell Pink - med lt</string>
    <string name="dmc153">Violet - vy lt</string>
    <string name="dmc154">Grape - vy dk</string>
    <string name="dmc155">Blue Violet - med dk</string>
    <string name="dmc156">Blue Violet - med lt</string>
    <string name="dmc157">Cornflower Blue - vy lt</string>
    <string name="dmc158">Cornflower Blue - med vy dk</string>
    <string name="dmc159">Gray Blue - lt</string>
    <string name="dmc160">Gray Blue - med</string>
    <string name="dmc161">Gray Blue</string>
    <string name="dmc162">Blue - ultra vy lt</string>
    <string name="dmc163">Celadon Green - med</string>
    <string name="dmc164">Forest Green - lt</string>
    <string name="dmc165">Moss Green - vy lt</string>
    <string name="dmc166">Moss Green - med lt</string>
    <string name="dmc167">Yellow Beige - vy dk</string>
    <string name="dmc168">Pewter - vy lt</string>
    <string name="dmc169">Pewter - lt</string>
    <string name="dmc208">Lavender - vy dk</string>
    <string name="dmc209">Lavender - dk</string>
    <string name="dmc210">Lavender - med</string>
    <string name="dmc211">Lavender - lt</string>
    <string name="dmc221">Shel lPink - vy dk</string>
    <string name="dmc223">Shell Pink - lt</string>
    <string name="dmc224">ShellPink - vy lt</string>
    <string name="dmc225">ShellPink - ultra vy lt</string>
    <string name="dmc300">Mahogany - vy dk</string>
    <string name="dmc301">Mahogany - med</string>
    <string name="dmc304">Christmas Red - med</string>
    <string name="dmc307">Lemon</string>
    <string name="dmc309">Rose - dk</string>
    <string name="dmc310">Black</string>
    <string name="dmc311">Navy Blue - med</string>
    <string name="dmc312">Navy Blue - lt</string>
    <string name="dmc315">Antique Mauve - med dk</string>
    <string name="dmc316">Antique Mauve - med</string>
    <string name="dmc317">Pewter Grey</string>
    <string name="dmc318">Steel Grey - lt</string>
    <string name="dmc319">Pistachio Green - vy dk</string>
    <string name="dmc320">Pistachio Green - med</string>
    <string name="dmc321">Christmas Red</string>
    <string name="dmc322">NavyBlue - vy lt</string>
    <string name="dmc326">Rose-vy dk</string>
    <string name="dmc327">Violet - vy dk</string>
    <string name="dmc333">BlueViolet - vy dk</string>
    <string name="dmc334">BabyBlue - med</string>
    <string name="dmc335">Rose</string>
    <string name="dmc336">Navy Blue</string>
    <string name="dmc340">Blue Violet - med</string>
    <string name="dmc341">Blue Violet - lt</string>
    <string name="dmc347">Salmon - vy dk</string>
    <string name="dmc349">Coral - dk</string>
    <string name="dmc350">Coral - med</string>
    <string name="dmc351">Coral</string>
    <string name="dmc352">Coral - lt</string>
    <string name="dmc353">Peach</string>
    <string name="dmc355">TerraCotta - dk</string>
    <string name="dmc356">TerraCotta - med</string>
    <string name="dmc367">PistachioGreen - dk</string>
    <string name="dmc368">PistachioGreen - lt</string>
    <string name="dmc369">PistachioGreen - vy lt</string>
    <string name="dmc370">Mustard - med</string>
    <string name="dmc371">Mustard</string>
    <string name="dmc372">Mustard - lt</string>
    <string name="dmc400">Mahogany - dk</string>
    <string name="dmc402">Mahogany - vy lt</string>
    <string name="dmc407">Desert Sand - dk</string>
    <string name="dmc413">Pewter Grey - dk</string>
    <string name="dmc414">Steel Grey - dk</string>
    <string name="dmc415">Pearl Grey</string>
    <string name="dmc420">Hazelnut Brown - dk</string>
    <string name="dmc422">Hazelnut Brown - lt</string>
    <string name="dmc433">Brown - med</string>
    <string name="dmc434">Brown - lt</string>
    <string name="dmc435">Brown - vy lt</string>
    <string name="dmc436">Tan</string>
    <string name="dmc437">Tan - lt</string>
    <string name="dmc444">Lemon - dk</string>
    <string name="dmc445">Lemon - lt</string>
    <string name="dmc451">Shell Grey - dk</string>
    <string name="dmc452">Shell Grey - med</string>
    <string name="dmc453">Shell Grey - lt</string>
    <string name="dmc469">Avocado Green</string>
    <string name="dmc470">Avocado Green - lt</string>
    <string name="dmc471">Avocado Green - vy lt</string>
    <string name="dmc472">Avocado Green - ultra lt</string>
    <string name="dmc498">Christmas Red - dk</string>
    <string name="dmcMelange">Melange</string>
    <string name="dmc500">Blue Green - vy dk</string>
    <string name="dmc501">Blue Green - dk</string>
    <string name="dmc502">Blue Green</string>
    <string name="dmc503">Blue Green - med</string>
    <string name="dmc504">Blue Green - vy lt</string>
    <string name="dmc505">Jade</string>
    <string name="dmc517">Wedgwood - dk</string>
    <string name="dmc518">Wedgwood - lt</string>
    <string name="dmc519">Sky Blue</string>
    <string name="dmc520">Fern Green - dk</string>
    <string name="dmc522">Fern Green</string>
    <string name="dmc523">Fern Green - lt</string>
    <string name="dmc524">Fern Green - vy lt</string>
    <string name="dmc535">Ash Grey - vy lt</string>
    <string name="dmc543">Beige Brown - ultra vy lt</string>
    <string name="dmc550">Violet - vy dk</string>
    <string name="dmc552">Violet - med</string>
    <string name="dmc553">Violet</string>
    <string name="dmc554">Violet - lt</string>
    <string name="dmc561">Jade - vy dk</string>
    <string name="dmc562">Jade - med</string>
    <string name="dmc563">Jade - lt</string>
    <string name="dmc564">Jade - vy lt</string>
    <string name="dmc580">Moss Green - dk</string>
    <string name="dmc581">Moss Green</string>
    <string name="dmc597">Turquoise</string>
    <string name="dmc598">Turquoise - lt</string>
    <string name="dmc600">Cranberry - vy dk</string>
    <string name="dmc601">Cranberry - dk</string>
    <string name="dmcMetal">Metal effects</string>
    <string name="dmc602">Cranberry - med</string>
    <string name="dmc603">Cranberry</string>
    <string name="dmc604">Cranberry - lt</string>
    <string name="dmc605">Cranberry - vy lt</string>
    <string name="dmc606">Bright Orange Red</string>
    <string name="dmc608">Bright Orange</string>
    <string name="dmc610">Drab Brown - vy dk</string>
    <string name="dmc611">Drab Brown - dk</string>
    <string name="dmc612">Drab Brown - med</string>
    <string name="dmc613">Drab Brown - lt</string>
    <string name="dmc632">Desert Sand - ultra vy dk</string>
    <string name="dmc640">Beige Grey - vy dk</string>
    <string name="dmc642">Beige Grey - dk</string>
    <string name="dmc644">Beige Grey - med</string>
    <string name="dmc645">Beaver Grey - vy dk</string>
    <string name="dmc646">Beaver Grey - dk</string>
    <string name="dmc647">Beaver Grey - med</string>
    <string name="dmc648">Beaver Grey - lt</string>
    <string name="dmc666">Christmas Red - bright</string>
    <string name="gamma2130">Old Gold - med</string>
    <string name="dmc676">Old Gold - lt</string>
    <string name="dmc677">Old Gold - vy lt</string>
    <string name="dmc680">Old Gold - dk</string>
    <string name="dmc699">Christmas Green</string>
    <string name="dmc700">Christmas Green - bright</string>
    <string name="dmc701">Christmas Green - lt</string>
    <string name="dmc702">Kelly Green</string>
    <string name="dmc703">Chartreuse</string>
    <string name="dmc704">Chartreuse - bright</string>
    <string name="dmc712">Cream</string>
    <string name="dmc718">Plum</string>
    <string name="dmc720">Orange Spice - dk</string>
    <string name="dmc721">Orange Spice - med</string>
    <string name="dmc722">Orange Spice - lt</string>
    <string name="dmc725">Topaz</string>
    <string name="dmc726">Topaz - lt</string>
    <string name="dmc727">Topaz - vy lt</string>
    <string name="dmc728">Topaz</string>
    <string name="dmc729">Old Gold - med</string>
    <string name="dmc730">Olive Green - vy dk</string>
    <string name="dmc731">Olive Green - dk</string>
    <string name="dmc732">Olive Green</string>
    <string name="dmc733">Olive Green - med</string>
    <string name="dmc734">Olive Green - lt</string>
    <string name="dmc738">Tan - vy lt</string>
    <string name="dmc739">Tan - ultra vy lt</string>
    <string name="dmc740">Tangerine</string>
    <string name="dmc741">Tangerine - med</string>
    <string name="dmc742">Tangerine - lt</string>
    <string name="dmc743">Yellow - med</string>
    <string name="dmc744">Yellow - pale</string>
    <string name="dmc745">Yellow - lt pale</string>
    <string name="dmc746">Off White</string>
    <string name="dmc747">Sky Blue - vy lt</string>
    <string name="dmc754">Peach - lt</string>
    <string name="dmc758">Terra Cotta - vy lt</string>
    <string name="dmc760">Salmon</string>
    <string name="dmc761">Salmon - lt</string>
    <string name="dmc762">Pearl Grey - vy lt</string>
    <string name="dmc772">Yellow Green - vy lt</string>
    <string name="dmc775">Baby Blue - vy lt</string>
    <string name="dmc776">Pink - med</string>
    <string name="dmc777">Raspberry - vy dk</string>
    <string name="dmc778">Antique Mauve - vy lt</string>
    <string name="dmc779">Cocoa - dk</string>
    <string name="dmc780">Topaz - ultra vy dk</string>
    <string name="dmc781">Topaz - vy dk</string>
    <string name="dmc782">Topaz - dk</string>
    <string name="dmc783">Topaz - med</string>
    <string name="dmc791">Cornflower Blue - vy dk</string>
    <string name="dmc792">Cornflower Blue - dk</string>
    <string name="dmc793">Cornflower Blue - med</string>
    <string name="dmc794">Cornflower Blue - lt</string>
    <string name="dmc796">Royal Blue - dk</string>
    <string name="dmc797">Royal Blue</string>
    <string name="dmc798">Delft - dk</string>
    <string name="dmc799">Delft - med</string>
    <string name="dmc800">Delft - pale</string>
    <string name="dmc801">Coffee Brown - dk</string>
    <string name="dmc803">Baby blue - ul vy dk</string>
    <string name="dmc806">Peacock Blue - dk</string>
    <string name="dmc807">Peacock Blue</string>
    <string name="dmc809">Delft</string>
    <string name="dmc813">Blue - lt</string>
    <string name="dmc814">Garnet - dk</string>
    <string name="dmc815">Garnet - med</string>
    <string name="dmc816">Garnet</string>
    <string name="dmc817">Coral Red - vy dk</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="load_state">The load will overwrite the current state of the application.Load?</string>
    <string name="loadText">Load from device</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="pathOfSave">The save file is located at: documents/CrossStitchAccount/recover.mp4</string>
    <string name="change_length">Change length</string>
    <string name="del">Delete</string>
    <string name="delete_thread_or_edit">Delete thread or edit?</string>
</resources>